static/css/results.css
#resultContainer {
    display: block;
    flex-direction: column;
    align-items: center;
    justify-content: flex-start;
    background-color: white;
    height: 100vh;
    width: 100vw;
    box-sizing: border-box;
    padding: 2vh;
}

body.mobile #jsonDropdown {
    font-size: 1rem;
    width: 66vw;
    padding: 12px;
    border-radius: 12px;
}

#completionTable td, th {
    border: none;
    padding-left: 10px;
    padding-right: 10px;
}

#completionTable {
    border: none;
    margin: 20px 0;
    width: 95vw;
    max-width: 700px;
}

body.mobile #completionTable {
    font-size: 1rem;
}

#completionTable th {
    border-bottom: 1px solid #ccc;
}

#completionTable .tableName {
    text-align: left;
}

#completionTable .tableTime {
    text-align: right;
}

.userCheckbox {
    padding-left: 0px;
    padding-right: 0px;
    vertical-align: middle;
}

#completionTable td:first-child,
#completionTable th:first-child {
    white-space: nowrap;
    width: 1%;
}

.text-right {
    text-align: right;
}

